[package]
name = "checkbar"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["parse_duration"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_repr = "*"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
toml = "0.7"

parse_duration = { path = "./parse_duration" }

[dev-dependencies]
hyper = "*"
serde_derive = "1"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"
