[package]
name = "checkbar"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["parse_duration"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
console = "0.15"
ctrlc = "3.4"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

parse_duration = { path = "./parse_duration" }

[dev-dependencies]
http = "0.2"
serde_derive = "1.0"

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"
